<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>br.com.unionti.architecture.jbpm6</groupId>
	<artifactId>jbpm6-jpa</artifactId>
	<version>0.0.3-SNAPSHOT</version>
	<name>JBPM6 JPA</name>

	<properties>
		<jbpm.version>6.5.0.Final</jbpm.version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.test.skip>true</maven.test.skip>
		<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
	</properties>

	<dependencies>
<!-- 		<dependency> -->
<!-- 			<groupId>org.kie</groupId> -->
<!-- 			<artifactId>kie-platform-bom</artifactId> -->
<!-- 			<version>${jbpm.version}</version> -->
<!-- 			<scope>import</scope> -->
<!-- 			<type>pom</type> -->
<!-- 		</dependency> --> 
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<scope>test</scope>
			<version>4.3.5.Final</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<scope>test</scope>
			<version>4.3.5.Final</version>
		</dependency>
		<dependency>
			<groupId>org.jbpm</groupId>
			<artifactId>jbpm-flow</artifactId>
			<version>6.5.0.Final</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.jbpm</groupId>
			<artifactId>jbpm-workitems</artifactId>
			<version>6.5.0.Final</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>


</project>